--- a/i18n/de.po
+++ b/i18n/de.po
@@ -6,14 +6,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenERP Server 6.1rc1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-01-23 20:35+0000\n"
-"PO-Revision-Date: 2012-01-23 20:35+0000\n"
-"Last-Translator: <>\n"
+"POT-Creation-Date: 2012-01-23 22:06+0000\n"
+"PO-Revision-Date: 2012-01-24 01:19+0000\n"
+"Last-Translator: Joël Grand-Guillaume @ CampToCamp "
+"<joel.grandguillaume@camptocamp.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Launchpad-Export-Date: 2012-04-21 05:27+0000\n"
+"X-Generator: Launchpad (build 15120)\n"
 
 #. module: chricar_partner_id_number
 #: view:res.partner:0
@@ -119,4 +121,3 @@ msgstr "Partner"
 #: field:res.partner.id_number,partner_issued_id:0
 msgid "Issued by"
 msgstr "Ausgestellt von"
-
