--- a/better_zip/i18n/es.po
+++ b/better_zip/i18n/es.po
@@ -1,19 +1,25 @@
 # Translation of OpenERP Server.
 # This file contains the translation of the following modules:
-#	* better_zip
+#       * better_zip
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: OpenERP Server 7.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-05-08 12:04+0000\n"
+"POT-Creation-Date: 2013-06-07 14:17+0000\n"
 "PO-Revision-Date: 2013-05-08 12:04+0000\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
 "Plural-Forms: \n"
+
+#. module: better_zip
+#: model:ir.actions.act_window,name:better_zip.action_zip_tree
+msgid "Cites/locations Management"
+msgstr "Cites/locations Management"
 
 #. module: better_zip
 #: field:res.better.zip,city:0
@@ -21,20 +27,7 @@ msgid "City"
 msgstr "City"
 
 #. module: better_zip
-#: view:res.company:0
-#: view:res.partner:0
-msgid "ZIP completion"
-msgstr "ZIP completion"
-
-#. module: better_zip
-#: model:ir.actions.act_window,name:better_zip.action_zip_tree
-#: model:ir.ui.menu,name:better_zip.zip_base
-msgid "ZIP Management"
-msgstr "ZIP Management"
-
-#. module: better_zip
-#: view:res.better.zip:0
-#: field:res.better.zip,name:0
+#: view:res.better.zip:0 field:res.better.zip,name:0
 msgid "ZIP"
 msgstr "ZIP"
 
@@ -42,6 +35,11 @@ msgstr "ZIP"
 #: field:res.better.zip,country_id:0
 msgid "Country"
 msgstr "Country"
+
+#. module: better_zip
+#: field:res.better.zip,priority:0
+msgid "Priority"
+msgstr "Priority"
 
 #. module: better_zip
 #: model:ir.model,name:better_zip.model_res_company
@@ -54,14 +52,19 @@ msgid "City Code"
 msgstr "City Code"
 
 #. module: better_zip
+#: model:ir.model,name:better_zip.model_res_better_zip
+msgid " City/locations completion object"
+msgstr " City/locations completion object"
+
+#. module: better_zip
 #: help:res.company,better_zip_id:0
 msgid "Use the city name or the zip code to search the location"
 msgstr "Use the city name or the zip code to search the location"
 
 #. module: better_zip
-#: field:res.better.zip,priority:0
-msgid "Priority"
-msgstr "Priority"
+#: field:res.partner,zip_id:0
+msgid "City/Location"
+msgstr "City/Location"
 
 #. module: better_zip
 #: field:res.better.zip,state_id:0
@@ -69,19 +72,14 @@ msgid "State"
 msgstr "State"
 
 #. module: better_zip
-#: model:ir.model,name:better_zip.model_res_better_zip
-msgid " Zip/NPA object"
-msgstr " Zip/NPA object"
-
-#. module: better_zip
 #: field:res.company,better_zip_id:0
 msgid "Location"
 msgstr "Location"
 
 #. module: better_zip
-#: field:res.partner,zip_id:0
-msgid "ZIP/PN"
-msgstr "ZIP/PN"
+#: model:ir.ui.menu,name:better_zip.zip_base
+msgid "Cities/Locations Management"
+msgstr "Cities/Locations Management"
 
 #. module: better_zip
 #: model:ir.model,name:better_zip.model_res_partner
@@ -89,9 +87,10 @@ msgid "Partner"
 msgstr "Partner"
 
 #. module: better_zip
-#: help:res.better.zip,code:0
-msgid "The official code for the city"
-msgstr "The official code for the city"
+#: view:res.company:0 view:res.partner:0
+#, fuzzy
+msgid "City completion"
+msgstr "City completion"
 
 #. module: better_zip
 #: field:res.country.state,better_zip_ids:0
@@ -103,3 +102,7 @@ msgstr "Cities"
 msgid "Country state"
 msgstr "Country state"
 
+#. module: better_zip
+#: help:res.better.zip,code:0
+msgid "The official code for the city"
+msgstr "The official code for the city"
