[FIX] Create Sql constraint anyway [CHG] Improve the _write_name method * trying to coerce to the correct lastname if the firstname is untouched * resetting the firstname if contact is a company [FIX] Avoid to replicate the firstname into the name when duplicating a partner [FIX] Avoid to replicate the firstname into the name when duplicating a user [CHG] Restore the required attribute of the field name in user form [CHG] Beautify the inner form for children contacts (placing fields as in the main form) [FIX] Allow edition of the field name in the inner form if child is a company

--- a/partner_firstname/i18n/de.po
+++ b/partner_firstname/i18n/de.po
@@ -16,6 +16,18 @@ msgstr ""
 "Plural-Forms: \n"
 
 #. module: partner_firstname
+#: code:addons/partner_firstname/partner.py:76
+#: code:addons/partner_firstname/res_user.py:35
+#, python-format
+msgid "%s (copy)"
+msgstr "%s (kopie)"
+
+#. module: partner_firstname
+#: model:ir.model,name:partner_firstname.model_res_users
+msgid "Users"
+msgstr "Benutzer"
+
+#. module: partner_firstname
 #: field:res.partner,lastname:0
 msgid "Lastname"
 msgstr "Name"
@@ -24,6 +36,11 @@ msgstr "Name"
 #: field:res.partner,firstname:0
 msgid "Firstname"
 msgstr "Vorname"
+
+#. module: partner_firstname
+#: view:res.partner:0
+msgid "Is a Company?"
+msgstr "Ist ein Unternehmen?"
 
 #. module: partner_firstname
 #: model:ir.model,name:partner_firstname.model_res_partner
