--- a/partner_firstname/i18n/en.po
+++ b/partner_firstname/i18n/en.po
@@ -16,9 +16,16 @@ msgstr ""
 "Plural-Forms: \n"
 
 #. module: partner_firstname
-#: field:res.partner,lastname:0
-msgid "Lastname"
-msgstr "Lastname"
+#: code:addons/partner_firstname/partner.py:76
+#: code:addons/partner_firstname/res_user.py:35
+#, python-format
+msgid "%s (copy)"
+msgstr "%s (copy)"
+
+#. module: partner_firstname
+#: model:ir.model,name:partner_firstname.model_res_users
+msgid "Users"
+msgstr "Users"
 
 #. module: partner_firstname
 #: field:res.partner,firstname:0
@@ -26,7 +33,16 @@ msgid "Firstname"
 msgstr "Firstname"
 
 #. module: partner_firstname
+#: field:res.partner,lastname:0
+msgid "Lastname"
+msgstr "Lastname"
+
+#. module: partner_firstname
+#: view:res.partner:0
+msgid "Is a Company?"
+msgstr "Is a Company?"
+
+#. module: partner_firstname
 #: model:ir.model,name:partner_firstname.model_res_partner
 msgid "Partner"
 msgstr "Partner"
-
