--- a/passport_partner/i18n/fr.po
+++ b/passport_partner/i18n/fr.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenERP Server 7.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-01-17 16:33+0000\n"
-"PO-Revision-Date: 2014-01-17 11:34-0500\n"
+"POT-Creation-Date: 2014-02-05 22:07+0000\n"
+"PO-Revision-Date: 2014-02-05 17:09-0500\n"
 "Last-Translator: EL Hadji DEM <elhadji.dem@savoirfairelinux.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -18,8 +18,30 @@ msgstr ""
 
 #. module: passport_partner
 #: view:res.partner:0
+msgid "Create"
+msgstr "Créer"
+
+#. module: passport_partner
+#: view:res.partner:0
 msgid "Passport Details"
 msgstr "Détails du passeport"
+
+#. module: passport_partner
+#: view:res.passport:0
+msgid "or"
+msgstr "ou"
+
+#. module: passport_partner
+#: code:addons/passport_partner/res_partner.py:37
+#: code:addons/passport_partner/res_partner.py:38
+#, python-format
+msgid "New Passport"
+msgstr "Nouveau passeport"
+
+#. module: passport_partner
+#: view:res.passport:0
+msgid "Save and Close"
+msgstr "Enregistrer et fermer"
 
 #. module: passport_partner
 #: field:res.passport,partner_id:0
@@ -27,15 +49,21 @@ msgid "Contact"
 msgstr "Contact"
 
 #. module: passport_partner
+#: model:ir.actions.act_window,name:passport_partner.action_passport_list
 #: model:ir.model,name:passport_partner.model_res_passport view:res.partner:0
-#: field:res.partner,passport_ids:0
+#: field:res.partner,passport_ids:0 view:res.passport:0
 msgid "Passport"
 msgstr "Passeport"
 
 #. module: passport_partner
 #: model:ir.model,name:passport_partner.model_res_partner
 msgid "Partner"
-msgstr "Partenaire"
+msgstr "Organisme"
+
+#. module: passport_partner
+#: view:res.passport:0
+msgid "Discard"
+msgstr "Annuler"
 
 #. module: passport_partner
 #: help:res.passport,partner_id:0
@@ -43,6 +71,6 @@ msgid "Contact."
 msgstr "Contact."
 
 #. module: passport_partner
-#: view:res.partner:0
+#: view:res.partner:0 view:res.passport:0
 msgid "Owner name (As printed into the passport)"
 msgstr "Nom du propriétaire (Comme écrit sur le passeport)"
