--- a/passport/i18n/fr.po
+++ b/passport/i18n/fr.po
@@ -6,15 +6,26 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenERP Server 7.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-01-17 16:27+0000\n"
-"PO-Revision-Date: 2014-01-17 11:30-0500\n"
-"Last-Translator: EL Hadji DEM <elhadji.dem@savoirfairelinux.com>\n"
+"POT-Creation-Date: 2014-02-24 23:40+0000\n"
+"PO-Revision-Date: 2014-02-24 18:47-0500\n"
+"Last-Translator: Sandy Carter <sandy.carter@savoirfairelinux.com>\n"
 "Language-Team: \n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: \n"
-"X-Generator: Poedit 1.5.4\n"
+"X-Generator: Poedit 1.6.4\n"
+
+#. module: passport
+#: help:res.passport,country_id:0
+msgid "Country of deliverance."
+msgstr "Pays émetteur."
+
+#. module: passport
+#: help:res.passport,birth_date:0
+msgid "Date of birth on passport."
+msgstr "Date de naissance sur le passeport."
 
 #. module: passport
 #: help:res.passport,gender:0
@@ -23,7 +34,8 @@ msgstr "Sexe."
 
 #. module: passport
 #: model:ir.actions.act_window,name:passport.action_passport_tree_list
-#: model:ir.model,name:passport.model_res_passport
+#: model:ir.model,name:passport.model_res_passport view:res.partner:0
+#: field:res.partner,passport_ids:0
 msgid "Passport"
 msgstr "Passeport"
 
@@ -43,9 +55,14 @@ msgid "Gender"
 msgstr "Sexe"
 
 #. module: passport
+#: field:res.passport,number:0
+msgid "Passport No"
+msgstr "No du passeport"
+
+#. module: passport
 #: help:res.passport,expiration_date:0
-msgid "Expiration date."
-msgstr "Date d'expiration."
+msgid "Expiration date of passport."
+msgstr "Date d'expiration sur le passeport."
 
 #. module: passport
 #: view:res.passport:0
@@ -53,14 +70,20 @@ msgid "PassportTree"
 msgstr "PassportTree"
 
 #. module: passport
-#: view:res.passport:0
-msgid "Owner name (As printed into the passport)"
-msgstr "Nom du propriétaire (Comme écrit sur le passeport)"
+#: code:addons/passport/res_partner.py:39
+#, python-format
+msgid "New Passport"
+msgstr "Nouveau passeport"
 
 #. module: passport
 #: view:res.passport:0
 msgid "PassportForm"
 msgstr "PassportForm"
+
+#. module: passport
+#: field:res.passport,partner_id:0
+msgid "Contact"
+msgstr "Contact"
 
 #. module: passport
 #: help:res.passport,number:0
@@ -78,14 +101,9 @@ msgid "Owner name (As printed into the passport)."
 msgstr "Nom du propriétaire (Comme écrit sur le passeport)."
 
 #. module: passport
-#: field:res.passport,number:0
-msgid "Passport No"
-msgstr "No du passeport"
-
-#. module: passport
-#: help:res.passport,birth_date:0
-msgid "Birth Date."
-msgstr "Date de naissance."
+#: model:ir.model,name:passport.model_res_partner
+msgid "Partner"
+msgstr "Organisme"
 
 #. module: passport
 #: selection:res.passport,gender:0
@@ -93,9 +111,9 @@ msgid "Male"
 msgstr "Homme"
 
 #. module: passport
-#: help:res.passport,country_id:0
-msgid "Delivery country."
-msgstr "Pays de délivrance."
+#: view:res.passport:0
+msgid "Owner name (As printed into the passport)"
+msgstr "Nom du propriétaire (Comme écrit sur le passeport)"
 
 #. module: passport
 #: field:res.passport,expiration_date:0
