[UPD] Translate Active by Actif in French

--- a/res_bank_account/i18n/fr.po
+++ b/res_bank_account/i18n/fr.po
@@ -44,7 +44,7 @@ msgstr "Intitulé du compte bancaire"
 #. module: res_bank_account
 #: field:res.partner.bank,active:0
 msgid "Active"
-msgstr "Active"
+msgstr "Actif"
 
 #. module: res_bank_account
 #: help:res.partner.bank,title_bank_account:0
