--- a/base_contact/i18n/fr.po
+++ b/base_contact/i18n/fr.po
@@ -24,7 +24,7 @@ msgstr "Ville"
 #. module: base_contact
 #: view:res.partner:0
 msgid "other position"
-msgstr "contact"
+msgstr "fonction"
 
 #. module: base_contact
 #: view:res.partner:0
@@ -63,7 +63,7 @@ msgstr "Étiquettes..."
 #. module: base_contact
 #: view:res.partner:0
 msgid "Other Positions"
-msgstr "Contacts"
+msgstr "Fonctions"
 
 #. module: base_contact
 #: view:res.partner:0
@@ -125,7 +125,7 @@ msgstr "Pays"
 #. module: base_contact
 #: field:res.partner,birthdate_date:0
 msgid "Birthdate"
-msgstr "Date d'anniversaire"
+msgstr "Date de naissance"
 
 #. module: base_contact
 #: view:res.partner:0
@@ -165,7 +165,7 @@ msgstr "ir.actions.act_window"
 #. module: base_contact
 #: view:res.partner:0
 msgid "other positions"
-msgstr "contacts"
+msgstr "fonctions"
 
 #. module: base_contact
 #: field:res.partner,contact_type:0
@@ -180,12 +180,12 @@ msgstr "Partenaire"
 #. module: base_contact
 #: field:res.partner,other_contact_ids:0
 msgid "Others Positions"
-msgstr "Contacts"
+msgstr "Fonctions"
 
 #. module: base_contact
 #: view:res.partner:0
 msgid "Personal Information"
-msgstr "Informations Personnelles"
+msgstr "Informations personnelles"
 
 #. module: base_contact
 #: view:res.partner:0
