--- a/res_bank_account/i18n/res_bank_account.pot
+++ b/res_bank_account/i18n/res_bank_account.pot
@@ -1,20 +1,24 @@
 # Translation of OpenERP Server.
 # This file contains the translation of the following modules:
-# 	* res_bank_account
+#	* res_bank_account
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: OpenERP Server 7.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-01-03 07:25+0000\n"
-"PO-Revision-Date: 2014-01-03 02:25-0500\n"
-"Last-Translator: EL Hadji DEM <elhadji.dem@savoirfairelinux.com>\n"
+"POT-Creation-Date: 2014-10-21 18:33+0000\n"
+"PO-Revision-Date: 2014-10-21 18:33+0000\n"
+"Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"Content-Transfer-Encoding: \n"
 "Plural-Forms: \n"
-"X-Generator: Poedit 1.5.4\n"
+
+#. module: res_bank_account
+#: view:res.partner:0
+msgid "Bank Details"
+msgstr ""
 
 #. module: res_bank_account
 #: field:res.partner.bank,observation:0
@@ -22,8 +26,8 @@ msgid "Observation"
 msgstr ""
 
 #. module: res_bank_account
-#: help:res.partner.bank,active:0
-msgid "Active/Inactive."
+#: help:res.partner.bank,title_bank_account:0
+msgid "Name for the bank account."
 msgstr ""
 
 #. module: res_bank_account
@@ -32,8 +36,8 @@ msgid "Bank Accounts"
 msgstr ""
 
 #. module: res_bank_account
-#: help:res.partner.bank,observation:0
-msgid "Observation."
+#: view:res.partner:0
+msgid "Banks"
 msgstr ""
 
 #. module: res_bank_account
@@ -42,11 +46,16 @@ msgid "Title bank account"
 msgstr ""
 
 #. module: res_bank_account
+#: help:res.partner.bank,observation:0
+msgid "Extra information about the account."
+msgstr ""
+
+#. module: res_bank_account
 #: field:res.partner.bank,active:0
 msgid "Active"
 msgstr ""
 
 #. module: res_bank_account
-#: help:res.partner.bank,title_bank_account:0
-msgid "Title bank account."
+#: help:res.partner.bank,active:0
+msgid "Whether the account is still active or not."
 msgstr ""
