correction to translation
Extension in this context is the "Durchwahl"

--- a/partner_phone_extension/i18n/de.po
+++ b/partner_phone_extension/i18n/de.po
@@ -26,7 +26,7 @@ msgstr "Partner"
 #. module: partner_phone_extension
 #: field:res.partner,extension:0
 msgid "Extension"
-msgstr "Erweiterung"
+msgstr "Durchwahl"
 
 #. module: partner_phone_extension
 #: help:res.partner,extension:0
