--- a/partner_firstname/i18n/de.po
+++ b/partner_firstname/i18n/de.po
@@ -2,18 +2,21 @@
 # This file contains the translation of the following modules:
 #	* partner_firstname
 #
+# Rudolf Schnapka <schnapkar@golive-saar.de>, 2015.
 msgid ""
 msgstr ""
 "Project-Id-Version: OpenERP Server 7.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-04 10:36+0000\n"
-"PO-Revision-Date: 2013-02-04 10:36+0000\n"
-"Last-Translator: <>\n"
-"Language-Team: \n"
+"PO-Revision-Date: 2015-01-02 11:52+0100\n"
+"Last-Translator: Rudolf Schnapka <schnapkar@golive-saar.de>\n"
+"Language-Team: German <kde-i18n-de@kde.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
 "Plural-Forms: \n"
+"Language: de\n"
+"X-Generator: Lokalize 1.5\n"
 
 #. module: partner_firstname
 #: code:addons/partner_firstname/partner.py:81
@@ -39,7 +42,7 @@ msgstr "Vorname"
 #. module: partner_firstname
 #: field:res.partner,lastname:0
 msgid "Lastname"
-msgstr "Name"
+msgstr "Nachname"
 
 #. module: partner_firstname
 #: view:res.partner:0
@@ -50,3 +53,4 @@ msgstr "Ist ein Unternehmen?"
 #: model:ir.model,name:partner_firstname.model_res_partner
 msgid "Partner"
 msgstr "Partner"
+
