--- a/res_partner_affiliate/i18n/de.po
+++ b/res_partner_affiliate/i18n/de.po
@@ -2,18 +2,21 @@
 # This file contains the translation of the following modules:
 #	* res_partner_affiliate
 #
+# Rudolf Schnapka <schnapkar@golive-saar.de>, 2015.
 msgid ""
 msgstr ""
 "Project-Id-Version: OpenERP Server 7.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-01 12:14+0000\n"
-"PO-Revision-Date: 2013-02-01 12:14+0000\n"
-"Last-Translator: <>\n"
-"Language-Team: \n"
+"PO-Revision-Date: 2015-01-02 12:25+0100\n"
+"Last-Translator: Rudolf Schnapka <schnapkar@golive-saar.de>\n"
+"Language-Team: German <kde-i18n-de@kde.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
 "Plural-Forms: \n"
+"Language: de\n"
+"X-Generator: Lokalize 1.5\n"
 
 #. module: res_partner_affiliate
 #: view:res.partner:0
@@ -24,7 +27,7 @@ msgstr "Tel.:"
 #: view:res.partner:0
 #: field:res.partner,affiliate_ids:0
 msgid "Affiliates"
-msgstr "Tochtergesellschaften"
+msgstr "Partnerunternehmen"
 
 #. module: res_partner_affiliate
 #: view:res.partner:0
@@ -34,10 +37,11 @@ msgstr "Mobil:"
 #. module: res_partner_affiliate
 #: model:ir.model,name:res_partner_affiliate.model_res_partner
 msgid "Partner"
-msgstr ""
+msgstr "Partner"
 
 #. module: res_partner_affiliate
 #: view:res.partner:0
 msgid "Fax:"
-msgstr ""
+msgstr "Fax:"
+
 
