Add unique constraint on res.better.zip

--- a/base_location/i18n/base_location.pot
+++ b/base_location/i18n/base_location.pot
@@ -112,3 +112,7 @@ msgstr ""
 msgid "The official code for the city"
 msgstr ""
 
+#. module: base_location
+#: sql_constraint:res.better.zip:0
+msgid "This location already exists !"
+msgstr ""
