--- a/partner_relations/i18n/partner_relations.pot
+++ b/partner_relations/i18n/partner_relations.pot
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: OpenERP Server 7.0\n"
+"Project-Id-Version: Odoo Server 8.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-07-01 08:52+0000\n"
 "PO-Revision-Date: 2014-07-01 08:52+0000\n"
