--- a/partner_relations/i18n/es.po
+++ b/partner_relations/i18n/es.po
@@ -1,19 +1,31 @@
-# Translation of OpenERP Server.
+# Translation of Odoo Server.
 # This file contains the translation of the following modules:
-#   * partner_relations
+#	* partner_relations
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 8.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-07-01 08:52+0000\n"
-"PO-Revision-Date: 2014-07-01 08:52+0000\n"
+"POT-Creation-Date: 2015-04-15 16:13+0000\n"
+"PO-Revision-Date: 2015-04-15 16:13+0000\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
 "Plural-Forms: \n"
+
+#. module: partner_relations
+#: model:ir.actions.act_window,help:partner_relations.action_res_partner_relation
+#: model:ir.actions.act_window,help:partner_relations.action_res_partner_relation_all
+msgid "<p class=\"oe_view_nocontent_create\">\n"
+"                    Record and track your partners' relations. Relations may be linked to other partners with a type either directly or inversely.\n"
+"                </p>\n"
+"            "
+msgstr "<p class=\"oe_view_nocontent_create\">\n"
+"                    Registro y seguimiento de las relaciones de sus empresas. Las relaciones pueden estar vinculadas a otras empresas con un tipo de relación directa o inversamente.\n"
+"                </p>\n"
+"            "
 
 #. module: partner_relations
 #: field:res.partner.relation,active:0
@@ -37,8 +49,26 @@ msgid "All relations with current partner"
 msgstr "Todas las relaciones con la empresa actual"
 
 #. module: partner_relations
+#: code:addons/partner_relations/model/res_partner_relation_type.py:64
+#, python-format
+msgid "Company"
+msgstr "Empresa"
+
+#. module: partner_relations
+#: field:res.partner.relation,create_uid:0
+#: field:res.partner.relation.type,create_uid:0
+msgid "Created by"
+msgstr "Creado por"
+
+#. module: partner_relations
+#: field:res.partner.relation,create_date:0
+#: field:res.partner.relation.type,create_date:0
+msgid "Created on"
+msgstr "Creado en"
+
+#. module: partner_relations
 #: field:res.partner.relation.all,this_partner_id:0
-msgid "Current partner"
+msgid "Current Partner"
 msgstr "Empresa actual"
 
 #. module: partner_relations
@@ -53,10 +83,21 @@ msgid "Current record's partner type"
 msgstr "Tipo de empresa del registro actual"
 
 #. module: partner_relations
+#: field:res.partner.relation,right_partner_id:0
+msgid "Destination Partner"
+msgstr "Empresa destino"
+
+#. module: partner_relations
 #: field:res.partner.relation,date_end:0
 #: field:res.partner.relation.all,date_end:0
 msgid "Ending date"
 msgstr "Fecha fin"
+
+#. module: partner_relations
+#: view:res.partner.relation:partner_relations.search_res_partner_relation
+#: view:res.partner.relation.all:partner_relations.search_res_partner_relation_all
+msgid "Group By"
+msgstr "Agrupar por"
 
 #. module: partner_relations
 #: field:res.partner,search_relation_id:0
@@ -74,6 +115,14 @@ msgid "Has relation with a partner in category"
 msgstr "Tiene una relación con las empresas con la etiqueta"
 
 #. module: partner_relations
+#: field:res.partner.relation,id:0
+#: field:res.partner.relation.all,id:0
+#: field:res.partner.relation.type,id:0
+#: field:res.partner.relation.type.selection,id:0
+msgid "ID"
+msgstr "ID"
+
+#. module: partner_relations
 #: field:res.partner.relation.type,name_inverse:0
 msgid "Inverse name"
 msgstr "Nombre inverso"
@@ -85,9 +134,26 @@ msgid "Inverse type"
 msgstr "Tipo inverso"
 
 #. module: partner_relations
-#: field:res.partner.relation,left_partner_id:0
-msgid "Left partner"
+#: field:res.partner.relation,write_uid:0
+#: field:res.partner.relation.type,write_uid:0
+msgid "Last Updated by"
+msgstr "Última actualización por"
+
+#. module: partner_relations
+#: field:res.partner.relation,write_date:0
+#: field:res.partner.relation.type,write_date:0
+msgid "Last Updated on"
+msgstr "Última actualización en"
+
+#. module: partner_relations
+#: view:res.partner.relation:partner_relations.search_res_partner_relation
+msgid "Left Partner"
 msgstr "Empresa izquierda"
+
+#. module: partner_relations
+#: field:res.partner.relation,left_contact_type:0
+msgid "Left Partner Type"
+msgstr "Tipo de empresa izquierda"
 
 #. module: partner_relations
 #: field:res.partner.relation.type,partner_category_left:0
@@ -100,7 +166,7 @@ msgid "Left partner type"
 msgstr "Tipo de empresa izquierda"
 
 #. module: partner_relations
-#: view:res.partner.relation.type:0
+#: view:res.partner.relation.type:partner_relations.form_res_partner_relation_type
 msgid "Left side of relation"
 msgstr "Lado izquierdo de la relación"
 
@@ -111,8 +177,9 @@ msgid "Name"
 msgstr "Nombre"
 
 #. module: partner_relations
+#: view:res.partner.relation.all:partner_relations.search_res_partner_relation_all
 #: field:res.partner.relation.all,other_partner_id:0
-msgid "Other partner"
+msgid "Other Partner"
 msgstr "Otra empresa"
 
 #. module: partner_relations
@@ -126,47 +193,73 @@ msgid "Other record's partner type"
 msgstr "Tipo de empresa del otro registro"
 
 #. module: partner_relations
-#: model:ir.model,name:partner_relations.model_res_partner_relation_type
-#: model:ir.model,name:partner_relations.model_res_partner_relation_type_inverse
-msgid "Parter relation type"
-msgstr "Tipo de relación de empresa"
-
-#. module: partner_relations
 #: model:ir.model,name:partner_relations.model_res_partner
 #: field:res.partner.relation,partner_id_display:0
 msgid "Partner"
 msgstr "Empresa"
 
 #. module: partner_relations
-#: model:ir.model,name:partner_relations.model_res_partner_category
-msgid "Partner Categories"
-msgstr "Etiquetas de empresa"
+#: view:res.partner.relation:partner_relations.form_res_partner_relation
+msgid "Partner Relation"
+msgstr "Relación entre empresas"
 
 #. module: partner_relations
-#: model:ir.model,name:partner_relations.model_res_partner_relation
-#: view:res.partner.relation:0
-#: view:res.partner.relation.all:0
-#: view:res.partner.relation.type:0
-msgid "Partner relation"
-msgstr "Relación de empresa"
+#: model:ir.model,name:partner_relations.model_res_partner_relation_type
+msgid "Partner Relation Type"
+msgstr "Tipo de relación entre empresas"
+
+#. module: partner_relations
+#: view:res.partner.relation:partner_relations.tree_res_partner_relation
+#: view:res.partner.relation.all:partner_relations.tree_res_partner_relation_all
+msgid "Partner Relations"
+msgstr "Relaciones entre empresas"
 
 #. module: partner_relations
 #: model:ir.actions.act_window,name:partner_relations.action_res_partner_relation_type
 #: model:ir.ui.menu,name:partner_relations.menu_res_partner_relation_type
-#: view:res.partner.relation.all:0
-msgid "Partner relations"
-msgstr "Relaciones de empresas"
+msgid "Partner Relations Types"
+msgstr "Tipos de relaciones entre empresas"
 
 #. module: partner_relations
-#: constraint:res.partner.relation:0
+#: field:res.partner.relation.all,contact_type:0
+msgid "Partner Type"
+msgstr "Tipo de empresa"
+
+#. module: partner_relations
+#: model:ir.model,name:partner_relations.model_res_partner_relation
+#: view:res.partner.relation.all:partner_relations.form_res_partner_relation_all
+#: view:res.partner.relation.type:partner_relations.form_res_partner_relation_type
+#: view:res.partner.relation.type:partner_relations.tree_res_partner_relation_type
+msgid "Partner relation"
+msgstr "Relación de empresa"
+
+#. module: partner_relations
+#: code:addons/partner_relations/model/res_partner_relation.py:291
+#, python-format
 msgid "Partners cannot have a relation with themselves."
-msgstr "Las empresas no pueden relacionarse consigo mismas."
+msgstr "Partners cannot have a relation with themselves."
+
+#. module: partner_relations
+#: code:addons/partner_relations/model/res_partner_relation_type.py:65
+#, python-format
+msgid "Person"
+msgstr "Contacto"
 
 #. module: partner_relations
 #: field:res.partner.relation.all,record_type:0
+msgid "Record Type"
+msgstr "Tipo de registro"
+
+#. module: partner_relations
 #: field:res.partner.relation.type.selection,record_type:0
 msgid "Record type"
 msgstr "Tipo de registro"
+
+#. module: partner_relations
+#: code:addons/partner_relations/model/res_partner_relation.py:360
+#, python-format
+msgid "Related partners"
+msgstr "Empresas relacionadas"
 
 #. module: partner_relations
 #: field:res.partner.relation.all,relation_id:0
@@ -174,19 +267,9 @@ msgid "Relation"
 msgstr "Relación"
 
 #. module: partner_relations
-#: field:res.partner.relation,is_relation_expired:0
-msgid "Relation is expired"
-msgstr "La relación ha expirado"
-
-#. module: partner_relations
-#: field:res.partner.relation,is_relation_future:0
-msgid "Relation is in the future"
-msgstr "La relación está en el futuro"
-
-#. module: partner_relations
 #: field:res.partner.relation.all,type_id:0
 #: field:res.partner.relation.all,type_selection_id:0
-msgid "Relation type"
+msgid "Relation Type"
 msgstr "Tipo de relación"
 
 #. module: partner_relations
@@ -195,15 +278,29 @@ msgid "Relation valid"
 msgstr "Relación válida"
 
 #. module: partner_relations
-#: view:res.partner:0
+#: model:ir.actions.act_window,name:partner_relations.action_res_partner_relation
+#: model:ir.actions.act_window,name:partner_relations.action_res_partner_relation_all
+#: model:ir.ui.menu,name:partner_relations.menu_res_partner_relation_sales
+#: view:res.partner:partner_relations.view_partner_form
 #: field:res.partner,relation_ids:0
 msgid "Relations"
 msgstr "Relaciones"
 
 #. module: partner_relations
-#: field:res.partner.relation,right_partner_id:0
-msgid "Right partner"
+#: view:res.partner.relation:partner_relations.search_res_partner_relation
+#: view:res.partner.relation.all:partner_relations.search_res_partner_relation_all
+msgid "Relationship Type"
+msgstr "Tipo de relación"
+
+#. module: partner_relations
+#: view:res.partner.relation:partner_relations.search_res_partner_relation
+msgid "Right Partner"
 msgstr "Empresa derecha"
+
+#. module: partner_relations
+#: field:res.partner.relation,right_contact_type:0
+msgid "Right Partner Type"
+msgstr "Tipo de empresa derecha"
 
 #. module: partner_relations
 #: field:res.partner.relation.type,partner_category_right:0
@@ -216,14 +313,30 @@ msgid "Right partner type"
 msgstr "Tipo empresa derecha"
 
 #. module: partner_relations
-#: view:res.partner.relation.type:0
+#: view:res.partner.relation.type:partner_relations.form_res_partner_relation_type
 msgid "Right side of relation"
 msgstr "Lado derecho de la relación"
+
+#. module: partner_relations
+#: view:res.partner.relation:partner_relations.search_res_partner_relation
+#: view:res.partner.relation.all:partner_relations.search_res_partner_relation_all
+msgid "Search Relations"
+msgstr "Buscar relaciones"
 
 #. module: partner_relations
 #: model:ir.actions.act_window,name:partner_relations.action_show_partner_relations
 msgid "Show partner's relations"
 msgstr "Mostrar la relaiones de la empresa"
+
+#. module: partner_relations
+#: model:ir.actions.server,name:partner_relations.action_show_right_relation_partners
+msgid "Show partners"
+msgstr "Mostrar empresas"
+
+#. module: partner_relations
+#: field:res.partner.relation,left_partner_id:0
+msgid "Source Partner"
+msgstr "Empresa origen"
 
 #. module: partner_relations
 #: field:res.partner.relation,date_start:0
@@ -232,30 +345,22 @@ msgid "Starting date"
 msgstr "Fecha inicio"
 
 #. module: partner_relations
-#: constraint:res.partner.relation:0
-msgid "The left partner is not applicable for this relation type."
-msgstr "La empresa de la izquierda no es aplicable para este tipo de relación."
+#: code:addons/partner_relations/model/res_partner_relation.py:278
+#, python-format
+msgid "The %s partner is not applicable for this relation type."
+msgstr "La empresa %s no aplica para este tipo de relación"
 
 #. module: partner_relations
-#: constraint:res.partner.relation:0
-msgid "The right partner is not applicable for this relation type."
-msgstr "La empresa de la derecha no es aplicable para este tipo de relación."
-
-#. module: partner_relations
-#: sql_constraint:res.partner.relation:0
-msgid "The same relation can't be created twice."
-msgstr "La misma relación no puede crearse dos veces."
-
-#. module: partner_relations
-#: constraint:res.partner.relation:0
+#: code:addons/partner_relations/model/res_partner_relation.py:245
+#, python-format
 msgid "The starting date cannot be after the ending date."
 msgstr "La fecha de inicio no puede ser posterior a la fecha de fin."
 
 #. module: partner_relations
-#: code:addons/partner_relations/model/res_partner_relation.py:260
+#: code:addons/partner_relations/model/res_partner_relation.py:319
 #, python-format
-msgid "Unsupported search operand \"%s\""
-msgstr "Operando de búsqueda no soportado: \"%s\""
+msgid "There is already a similar relation with overlapping dates"
+msgstr "Hay una relación similar que se solapa en fechas"
 
 #. module: partner_relations
 #: field:res.partner.relation,type_id:0
@@ -267,17 +372,8 @@ msgid "Type"
 msgstr "Tipo"
 
 #. module: partner_relations
-#: field:res.partner.category,only_for_organisation:0
-msgid "Valid for organisation only"
-msgstr "Sólo válida para empresas"
-
-#. module: partner_relations
-#: field:res.partner.category,only_for_person:0
-msgid "Valid for person only"
-msgstr "Sólo válida para contactos"
-
-#. module: partner_relations
-#: model:ir.model,name:partner_relations.model_ir_translation
-msgid "ir.translation"
-msgstr "ir.translation"
+#: code:addons/partner_relations/model/res_partner.py:109
+#, python-format
+msgid "Unsupported search operand \"%s\""
+msgstr "Operando de búsqueda no soportado: \"%s\""
 
