Honor translator credits.
Translators were overridden automatically by PoEdit.

--- a/partner_contact_base/i18n/de.po
+++ b/partner_contact_base/i18n/de.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-05-19 10:13+0000\n"
 "PO-Revision-Date: 2015-05-19 12:15+0100\n"
-"Last-Translator: Jairo Llopis <j.llopis@grupoesoc.es>\n"
+"Last-Translator: Rudolf Schnapka <schnapkar@golive-saar.de>\n"
 "Language-Team: German <kde-i18n-de@kde.org>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
