--- a/partner_contact_base/i18n/sl.po
+++ b/partner_contact_base/i18n/sl.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-05-19 10:13+0000\n"
 "PO-Revision-Date: 2015-05-19 12:15+0100\n"
-"Last-Translator: Jairo Llopis <j.llopis@grupoesoc.es>\n"
+"Last-Translator: Matjaž Mozetič <m.mozetic@matmoz.si>\n"
 "Language-Team: Slovenian <translate@matmoz.si>\n"
 "Language: sl\n"
 "MIME-Version: 1.0\n"
