--- a/partner_activity_report/i18n/it.po
+++ b/partner_activity_report/i18n/it.po
@@ -23,7 +23,7 @@ msgstr "Address Informations"
 #. module: partner_activity_report
 #: view:website:partner_activity_report.report_partner_activity_def
 msgid "Amount"
-msgstr "Montant"
+msgstr "Importo"
 
 #. module: partner_activity_report
 #: view:partner.print.activity:partner_activity_report.partner_print_activity_form
@@ -43,7 +43,7 @@ msgstr "City"
 #. module: partner_activity_report
 #: view:website:partner_activity_report.report_partner_activity_def
 msgid "Code"
-msgstr "Code"
+msgstr "Codice"
 
 #. module: partner_activity_report
 #: view:website:partner_activity_report.report_partner_activity_def
@@ -68,7 +68,7 @@ msgstr "Created on"
 #. module: partner_activity_report
 #: view:website:partner_activity_report.report_partner_activity_def
 msgid "Date"
-msgstr "Date"
+msgstr "Data"
 
 #. module: partner_activity_report
 #: view:website:partner_activity_report.report_partner_activity_def
@@ -78,12 +78,12 @@ msgstr "Date Deadline"
 #. module: partner_activity_report
 #: view:website:partner_activity_report.report_partner_activity_def
 msgid "Description"
-msgstr "Description"
+msgstr "Descrizione"
 
 #. module: partner_activity_report
 #: view:website:partner_activity_report.report_partner_activity_def
 msgid "Email"
-msgstr "Courriel"
+msgstr "Email"
 
 #. module: partner_activity_report
 #: view:website:partner_activity_report.report_partner_activity_def
@@ -114,7 +114,7 @@ msgstr "Mobile"
 #. module: partner_activity_report
 #: view:website:partner_activity_report.report_partner_activity_def
 msgid "Name"
-msgstr "Description"
+msgstr "Nome"
 
 #. module: partner_activity_report
 #: code:addons/partner_activity_report/wizard/partner_activity_selection.py:66
@@ -235,17 +235,17 @@ msgstr "Print partner recent sale orders"
 #. module: partner_activity_report
 #: view:website:partner_activity_report.report_partner_activity_def
 msgid "Product"
-msgstr "Article"
+msgstr "Prodotto"
 
 #. module: partner_activity_report
 #: view:website:partner_activity_report.report_partner_activity_def
 msgid "Quantity"
-msgstr "Quantité"
+msgstr "Quantità"
 
 #. module: partner_activity_report
 #: view:website:partner_activity_report.report_partner_activity_def
 msgid "Reference"
-msgstr "Référence"
+msgstr "Riferimento"
 
 #. module: partner_activity_report
 #: view:website:partner_activity_report.report_partner_activity_def
@@ -265,7 +265,7 @@ msgstr "Serial"
 #. module: partner_activity_report
 #: view:website:partner_activity_report.report_partner_activity_def
 msgid "State"
-msgstr "État"
+msgstr "Stato"
 
 #. module: partner_activity_report
 #: view:website:partner_activity_report.report_partner_activity_def
